fix day behind

--- a/src/components/dayCard/dayCard.scss
+++ b/src/components/dayCard/dayCard.scss
@@ -60,7 +60,7 @@
 
 @media screen and (max-width: 450px){
     .DayCard {
-        height: 35%;
+        height: 400px;
         width: 100%;
         &:hover{
         transform: none;
